update path to figures

--- a/2.md
+++ b/2.md
@@ -18,11 +18,11 @@ $mv
 
 ## Linux directory structure
 
-![](filesystem-structure.png)
+![](figures/filesystem-structure.png)
 
 ## Linux Boot process
 
-![](linux-boot-process.png)
+![](figures/linux-boot-process.png)
 
 ## Absolute paths vs Relative paths
 
