--- a/4.md
+++ b/4.md
@@ -94,7 +94,7 @@ sed -ei 's/U/X/g' protein-sequence.txt
 
 1. Extract *protein product* and *description* in the following tab-separated(tab) [file](./data/Thamnophis_Protein_table.txt) into a comma-separated (csv) file.
 2. A software that calls for bases while sequencing had a bug which made all the Adenine in the sequence marked as "X" instead of "A". You called the customer support and they fixed the bug by releasing a new update to the software. But your lab had insufficient fund to update to the newer version. You inform your PI and he tells you to write a script to fix this issue in your sequence. How will you fix this? (You can not update the software using personal funds)
-3. Search the following 8 nucleotide sequence in this [file](./data/dna.example.fasta): "tagctgatc". Report the lines in which they occur.
+3. Search the following 8 nucleotide sequence in this [file](./data/dna_example.txt): "tagctgatc". Report the lines in which they occur.
 
 # Python
 
